test/data/fail/expressions/function.js
(function* yield(){});
//<>
(async function await(){});
//<>
(async function* yield(){});
//<>
(async function* await(){});
//<>
(function*(){ yield.a; });
//<>
(function*(){ var yield; });
//<>
(function*(){ let yield; });
//<>
(function*(){ yield: });
